force-app/main/default/objects/Position__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Head count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>