force-app/main/default/objects/Position__c/fields/LimitCostofAccommodationperDay__c.field-meta.xml
<CustomField>
    <fullName>LimitCostofAccommodationperDay__c</fullName>
    <label>Limit Cost of Accommodation per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>