force-app/main/default/objects/Position__c/fields/LimitCostofMealperDay__c.field-meta.xml
<CustomField>
    <fullName>LimitCostofMealperDay__c</fullName>
    <label>Limit Cost of Meal per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>