force-app/main/default/objects/Position__c/fields/Recruitmentactive__c.field-meta.xml
<CustomField>
    <fullName>Recruitmentactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recruitment active</label>
    <type>Checkbox</type>
</CustomField>